--- a/style.css
+++ b/style.css
@@ -4,25 +4,25 @@
   color: #333;
   font-family: "Lato", sans-serif;
 }
-.aaa {
+.todo-guide {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.todo-guide img {
   width: 100%;
 }
-.aaa .more_inf {
+.todo-guide .more-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa { 
+  .todo-guide { 
     text-align: center;
   }
 }
-.centered-main-page-element {
+.todo-tasks {
   display: block;
   width: 500px;
   margin: 0 auto 0;
@@ -35,16 +35,16 @@
 .task-row-wrapper {
   display: flex;
 }
-.ul {
+.task-list {
   margin: 0;
   padding: 0px;
 }
-.li,
-.h3 {
+.task-item,
+.title {
   list-style: none;
 }
 .input,
-.input-checkbox,
+.task-checkbox,
 .button {
   outline: none;
 }
@@ -63,7 +63,7 @@
   color: #3a3a3a;
 }
 /* Heading */
-.h3,
+.title,
 .label[for="new-task"] {
   color: #333;
   font-weight: 700;
@@ -99,7 +99,7 @@
 }
 
 /* Task list */
-.li {
+.task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -107,20 +107,20 @@
   justify-content: space-between;
   align-items: center;
 }
-.li > * {
+.task-item > * {
   vertical-align: middle;
 }
 
-.li > .input-checkbox[type="checkbox"] {
+.task-item > .task-checkbox[type="checkbox"] {
   margin: 0 10px;
 }
-.li > .label {
+.task-item > .label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.li > .input[type="text"] {
+.task-item > .input[type="text"] {
   width: 226px;
 }
 
@@ -141,15 +141,15 @@
 }
 
 /* Edit Task */
-.ul .li .input[type="text"] {
+.task-list .task-item .input[type="text"] {
   display: none;
 }
 
-.ul .li.editMode .input[type="text"] {
+.task-list .task-item.editMode .input[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-.ul .li.editMode .label {
+.task-list .task-item.editMode .label {
   display: none;
 }
