--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .todo-guide img {
   width: 100%;
 }
-.todo-guide .more-info {
+.todo-guide .task-matrix {
   font-family: fantasy, cursive;
 }
 
@@ -40,16 +40,16 @@
   padding: 0px;
 }
 .task-item,
-.title {
+.list-title {
   list-style: none;
 }
-.input,
+.input-task,
 .task-checkbox,
-.button {
+.btn-task {
   outline: none;
 }
 
-.button {
+.btn-task {
   background: none;
   border: 0px;
   color: #888;
@@ -59,12 +59,12 @@
   cursor: pointer;
 }
 
-.button:hover {
+.btn-task:hover {
   color: #3a3a3a;
 }
 /* Heading */
-.title,
-.label[for="new-task"] {
+.list-title,
+.task-name[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -73,7 +73,7 @@
   margin: 0;
   text-transform: uppercase;
 }
-.input[type="text"] {
+.input-task[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -85,16 +85,16 @@
   font-family: "Lato", sans-serif;
   color: #888;
 }
-.input[type="text"]:focus {
+.input-task[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-.label[for="new-task"] {
+.task-name[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-.input#new-task {
+.input-task#new-task {
   width: 318px;
 }
 
@@ -114,42 +114,42 @@
 .task-item > .task-checkbox[type="checkbox"] {
   margin: 0 10px;
 }
-.task-item > .label {
+.task-item > .task-name {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.task-item > .input[type="text"] {
+.task-item > .input-task[type="text"] {
   width: 226px;
 }
 
-.button.delete img {
+.btn-task.delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.button.delete img:hover {
+.btn-task.delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks .label {
+#completed-tasks .task-name {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.task-list .task-item .input[type="text"] {
+.task-list .task-item .input-task[type="text"] {
   display: none;
 }
 
-.task-list .task-item.editMode .input[type="text"] {
+.task-list .task-item.editMode .input-task[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-.task-list .task-item.editMode .label {
+.task-list .task-item.editMode .task-name {
   display: none;
 }
