refactor(basic-3.1 and extended-2.1):  add BEM naming

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .todo-guide img {
   width: 100%;
 }
-.todo-guide .task-matrix {
+.todo-guide__task-matrix {
   font-family: fantasy, cursive;
 }
 
@@ -27,29 +27,30 @@
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.todo-tasks__task-name_width,
+.todo-task__input-task_width {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.todo-tasks__task-row-wrapper {
   display: flex;
 }
-.task-list {
+.todo-tasks__task-list {
   margin: 0;
   padding: 0px;
 }
-.task-item,
-.list-title {
+.todo-tasks__task-item,
+.todo-tasks__list-title {
   list-style: none;
 }
-.input-task,
-.task-checkbox,
-.btn-task {
+.todo-tasks__input-task,
+.todo-tasks__task-checkbox,
+.todo-tasks__btn-task {
   outline: none;
 }
 
-.btn-task {
+.todo-tasks__btn-task {
   background: none;
   border: 0px;
   color: #888;
@@ -59,12 +60,12 @@
   cursor: pointer;
 }
 
-.btn-task:hover {
+.todo-tasks__btn-task:hover {
   color: #3a3a3a;
 }
 /* Heading */
-.list-title,
-.task-name[for="new-task"] {
+.todo-tasks__list-title,
+.todo-tasks__task-name[for="new-task"] {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -73,7 +74,7 @@
   margin: 0;
   text-transform: uppercase;
 }
-.input-task[type="text"] {
+.todo-tasks__input-task[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -85,21 +86,21 @@
   font-family: "Lato", sans-serif;
   color: #888;
 }
-.input-task[type="text"]:focus {
+.todo-tasks__input-task[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-.task-name[for="new-task"] {
+.todo-tasks__task-name[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
-.input-task#new-task {
+.todo-tasks__input-task#new-task {
   width: 318px;
 }
 
 /* Task list */
-.task-item {
+.todo-tasks__task-item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -107,49 +108,49 @@
   justify-content: space-between;
   align-items: center;
 }
-.task-item > * {
+.todo-tasks__task-item > * {
   vertical-align: middle;
 }
 
-.task-item > .task-checkbox[type="checkbox"] {
+.todo-tasks__task-item > .todo-tasks__task-checkbox[type="checkbox"] {
   margin: 0 10px;
 }
-.task-item > .task-name {
+.todo-tasks__task-item > .todo-tasks__task-name {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-.task-item > .input-task[type="text"] {
+.todo-tasks__task-item > .todo-tasks__input-task[type="text"] {
   width: 226px;
 }
 
-.btn-task.delete img {
+.todo-tasks__btn-task_delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-.btn-task.delete img:hover {
+.todo-tasks__btn-task_delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-#completed-tasks .task-name {
+.todo-tasks__task-list_completed-tasks {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-.task-list .task-item .input-task[type="text"] {
+.todo-tasks__task-list .todo-tasks__task-item .todo-tasks__input-task[type="text"] {
   display: none;
 }
 
-.task-list .task-item.editMode .input-task[type="text"] {
+.todo-tasks__task-list .todo-tasks__task-item_edit-mode .todo-tasks__input-task[type="text"] {
   display: inline-block;
   width: 224px;
 }
 
-.task-list .task-item.editMode .task-name {
+.todo-tasks__task-list .todo-tasks__task-item_edit-mode .todo-tasks__task-name {
   display: none;
 }
